--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
   <div class="background">
     <div class="overlay">
       <div class="container">
+        <img src="image/background.jpg" style="width: 200px;text-align: center;">
         <h1 class="title">BMF TOURNOI</h1>
         <p class="subtitle">Formulaire d'inscription au tournoi officiel</p>
 
-        <form id="form" enctype="multipart/form-data">
+        <form id="form">
           <input type="text" name="team" placeholder="Nom de l’équipe" required />
           <input type="text" name="captain" placeholder="Capitaine" required />
+          <input type="email" name="email" placeholder="Email" required />
+          <input type="tel" name="phone" placeholder="Numéro de téléphone" required />
           <input type="text" name="member1" placeholder="Membre 1" />
           <input type="text" name="member2" placeholder="Membre 2" />
           <input type="text" name="member3" placeholder="Membre 3" />
           <input type="text" name="member4" placeholder="Membre 4" />
           <input type="text" name="member5" placeholder="Membre 5" />
           <input type="text" name="member6" placeholder="Membre 6" />
-          <label>Image de l'équipe :</label>
-          <input type="file" name="teamImage" required />
-          <label>Preuve de paiement :</label>
-          <input type="file" name="proof" required />
           <button type="submit">Envoyer</button>
           <p id="confirmation" class="confirmation"></p>
         </form>
@@ -33,6 +32,13 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const form = document.getElementById('form');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      // Ici, tu peux envoyer les données via fetch() ou simplement rediriger :
+      window.location.href = "payement.html";
+    });
+  </script>
 </body>
 </html>
