--- a/payement.html
+++ b/payement.html
@@ -16,8 +16,8 @@
     <img src="image/wave_qr.png" alt="QR Code de paiement" class="payment-img" />
 
     <div class="buttons">
-      <a href="#" class="btn">Paiement</a>
-      <a href="https://wa.me/225XXXXXXXXX?text=Bonjour%2C%20je%20vous%20envoie%20la%20preuve%20de%20paiement%20du%20tournoi%20BMF.%20Nom%20de%20l%27équipe%20%3A%20..." target="_blank" class="btn whatsapp">
+      <a href="https://pay.wave.com/m/M_ci_-q0lyGrvktKI/c/ci" class="btn">Paiement</a>
+      <a href="https://wa.me/2250703255471" target="_blank" class="btn whatsapp">
         Envoyer les preuves
       </a>
     </div>
