--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
  <div style="text-align: center;">
   <img src="image/background.jpg" style="width: 200px;">
-</div>" style="width: 200px;text-align: center;">
+</div>"
         <h1 class="title">BMF TOURNOI</h1>
         <p class="subtitle">Formulaire d'inscription au tournoi officiel</p>
 
