Sauvegarde avant pull

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <input type="text" name="member6" placeholder="Membre 6" />
           
           <!-- ✅ Redirection automatique après soumission réussie -->
-          <input type="hidden" name="_redirect" value="payement.html">
+          <input type="hidden" name="Lien de payement" value="https://matrixharck.github.io/BMFTOURNOI/payement">
 
           <button type="submit">Envoyer</button>
         </form>
