--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <div class="background">
     <div class="overlay">
       <div class="container">
-
+        <div style="text-align: center;">
+          <img src="image/background.jpg" style="width: 200px;">
+        </div>
         <h1 class="title">BMF TOURNOI</h1>
         <p class="subtitle">Formulaire d'inscription au tournoi officiel</p>
 
